Fixed desription file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Title: Probability Applications
-ShortName: Probability Applications
+Title: Waiter Experiment
+ShortName: Waiter Experiment
 Date: 2020-12-08
 Lifecycle: experimental
 Authors@R: c(
